fix: address code review issues from PR #7
- Remove @Transactional from fetchAndCacheForBorough so each upsertRestaurantCache
  runs in its own transaction; a single bad place no longer rolls back the batch
- Apply borough bbox filter in fetchAndCacheForBorough (was missing, only
  neighborhood and trending fetches had it)
- Add @Scheduled(cron = "0 0 0 * * *") to resetDailyCounters so API quota
  counters actually reset at midnight instead of locking permanently after day one
- Require authentication for POST /homepage/refresh/** and
  POST /homepage/trending/update/** — removes unauthenticated quota exhaustion vector
- Fix localStorage key "access_token" -> "accessToken" in fetchActiveSession
  so the active session banner can actually read the auth token
- Replace hardcoded production OAuth URL with /api/oauth2/authorization/google
  so login works in all environments
- Remove dead /homepage/cache/refresh and /homepage/cache/stats calls from
  homepageApi.ts and client.ts (endpoints do not exist, always 404)